added gtk3 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,21 @@ enable_testing()
 
 set(SRC_C src/child)
 set(SRC_P src/parent)
-
-
 set(CHILD_SOURCES ${SRC_C}/child.cpp)
 set(PARENT_SOURCES ${SRC_P}/parent.cpp)
 
+FIND_PACKAGE(PkgConfig REQUIRED)
+PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
+
+INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
+LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
+
+ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})
 
 add_executable(parent ${PARENT_SOURCES})
 add_executable(child  ${CHILD_SOURCES})
 
+TARGET_LINK_LIBRARIES(child ${GTK3_LIBRARIES})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
