--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,10 @@ LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
 
 ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})
 
-add_executable(parent ${PARENT_SOURCES})
-add_executable(child  ${CHILD_SOURCES})
+add_executable(AAparent ${PARENT_SOURCES})
+add_executable(AAchild  ${CHILD_SOURCES})
 
-TARGET_LINK_LIBRARIES(child ${GTK3_LIBRARIES})
+TARGET_LINK_LIBRARIES(AAchild ${GTK3_LIBRARIES})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
